; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_buffers.c_mlxsw_sp_port_buffers_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_buffers.c_mlxsw_sp_port_buffers_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp_port = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlxsw_sp_port_buffers_init(%struct.mlxsw_sp_port* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mlxsw_sp_port*, align 8
  %4 = alloca i32, align 4
  store %struct.mlxsw_sp_port* %0, %struct.mlxsw_sp_port** %3, align 8
  %5 = load %struct.mlxsw_sp_port*, %struct.mlxsw_sp_port** %3, align 8
  %6 = call i32 @mlxsw_sp_port_headroom_init(%struct.mlxsw_sp_port* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  %12 = load %struct.mlxsw_sp_port*, %struct.mlxsw_sp_port** %3, align 8
  %13 = call i32 @mlxsw_sp_port_sb_cms_init(%struct.mlxsw_sp_port* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %22

18:                                               ; preds = %11
  %19 = load %struct.mlxsw_sp_port*, %struct.mlxsw_sp_port** %3, align 8
  %20 = call i32 @mlxsw_sp_port_sb_pms_init(%struct.mlxsw_sp_port* %19)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %18, %16, %9
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @mlxsw_sp_port_headroom_init(%struct.mlxsw_sp_port*) #1

declare dso_local i32 @mlxsw_sp_port_sb_cms_init(%struct.mlxsw_sp_port*) #1

declare dso_local i32 @mlxsw_sp_port_sb_pms_init(%struct.mlxsw_sp_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
